# kajas

./: .gitignore  LICENSE  Makefile  README.md  kajas
backend/: pyproject.toml
backend/kajas/: __init__.py  agency_bench.py  auth.py  benchmarks.py  cli.py  config.py  doctor.py  paths.py  projects.py  run_store.py  runs.py  server.py
backend/kajas/adapters/: __init__.py  base.py  codex.py  fake.py  pi.py
docs/: kajas-v1-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: check-tauri-prereqs.mjs  package-backend.mjs
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/python/: kajas_backend_entry.py
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: Sidebar.tsx  StatusPill.tsx  TokenUsageChart.tsx
frontend/src/lib/: api.ts  format.ts  types.ts
frontend/src/pages/: Benchmark.tsx  BenchmarkRun.tsx  Config.tsx  Dashboard.tsx  Health.tsx  Login.tsx  NewRun.tsx  Projects.tsx  RunDetail.tsx
frontend/src/styles/: index.css
prototypes/kajas_harness_prototype/: NOTES.md  harness_model.py  tui.py
releases/: README.md
tests/: test_adapters.py  test_agency_bench.py  test_api.py  test_auth.py  test_config.py  test_doctor.py  test_projects.py  test_restart.py  test_run_store.py  test_runs.py
