[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kajas"
version = "0.1.1"
description = "Local-first harness for running agentic coding workflows from a Web UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kajas contributors" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "argon2-cffi>=23.1",
  "itsdangerous>=2.1",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[project.scripts]
kajas = "kajas.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kajas*"]

[tool.setuptools.package-data]
"kajas" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
asyncio_mode = "auto"
addopts = "-ra"
