[package]
name = "kajas-desktop"
version = "0.1.2"
description = "Desktop shell for Kajas"
authors = ["Kajas contributors"]
edition = "2021"

[lib]
name = "kajas_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
ureq = { version = "2", default-features = false, features = ["json"] }
